--- a/profiles/dev-cmto-01.properties
+++ b/profiles/dev-cmto-01.properties
@@ -2,7 +2,7 @@
 # ========================LICENSE_START=================================
 # CPASS Report Engine
 # %%
-# Copyright (C) 2019 - 2020 CSI Piemonte
+# Copyright (C) 2019 - 2025 CSI Piemonte
 # %%
 # SPDX-FileCopyrightText: Copyright 2019 - 2020 | CSI Piemonte
 # SPDX-License-Identifier: EUPL-1.2
@@ -14,4 +14,4 @@ jpa.showSql = true
 jpa.formatSql = false
 
 ### BIRT
-birt.working.folder = /appserv/jboss/awf170/reports/cpassreptpl
+birt.working.folder = $$birt.working.folder$$
